--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="webthemez">
-  <title>Wedding Bells Free Responsive HTML5 Template | webthemez</title>
+  <title>北美宠物论坛 | Breaking Pet</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -120,25 +120,129 @@
     <div class="container">
       <h2 class="centered">BLOGS</h2>
       <hr>
+
+
+      <!-- ==== START BLOG PORTFOLIO ==== -->
       <div class="col-md-12">
+        <!-- ==== START OF DOGS BLOG PORTFOLIO ==== -->
         <h3>Dogs</h3>
         <div class="row-home-portfolio">
-          <div class="col-md-3">
-            <img class="img-folio" src="assets/img/portfolio/folio01.jpg" alt="home01">
-          </div>
-          <div class="col-md-3">
-            <img class="img-folio" src="assets/img/portfolio/folio02.jpg" alt="home02">
-          </div>
-          <div class="col-md-3">
-            <img class="img-folio" src="assets/img/portfolio/folio03.jpg" alt="home03">
-          </div>
-          <div class="col-md-3">
-            <img class="img-folio" src="assets/img/portfolio/folio04.jpg" alt="home04">
+          <div class="card-deck">
+            <div class="card">
+              <img src="assets/img/portfolio/dog01.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Can a Golden Retriever be a good family dog?</h5>
+                <p class="card-text">Golden retrievers are great with babies, older kids, adults, and other dogs.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assets/img/portfolio/dog02.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">What's the best way to socialize a German Shepherd?</h5>
+                <p class="card-text">Expose your German Shepherd to other people, family, and pets. </p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assets/img/portfolio/dog03.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">How do i train my puppy</h5>
+                <p class="card-text">Exercise your puppy before training them so they aren’t as hyper.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+
+            <div class="card ">
+              <img src="assets/img/portfolio/dog04.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Searching for the best dog groomer in san francisco?</h5>
+                <p class="card-text">How often your dog should be groomed is, on average, every six weeks.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assets/img/portfolio/dog05.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Socializing Your Puppy During the COVID-19 Pandemic</h5>
+                <p class="card-text">The social distancing required during the COVID-19 pandemic can make it more challenging to socialize your puppy.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
           </div>
         </div>
+
+        <!-- ==== END OF DOGS BLOG PORTFOLIO ==== -->
+        <!-- ==== START OF CATS BLOG PORTFOLIO ==== -->
         <h3>Cats</h3>
-        <p>Lorem ipsum dolor sit amet, quo meis audire placerat eu, te eos porro veniam. An everti maiorum detracto mea. Eu eos dicam voluptaria, erant bonorum albucius et per, ei sapientem accommodare est. Saepe dolorum constituam ei vel.</p>
+        <div class="row-home-portfolio">
+          <div class="card-deck">
+            <div class="card">
+              <img src="assets/img/portfolio/cat01.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Here's the Best Way to Pet a Cat, According to Science</h5>
+                <p class="card-text">Signs of cat enjoyment: • Tail held upright and choosing to initiate contact.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assets/img/portfolio/cat02.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">What is the most exotic cat in the world?</h5>
+                <p class="card-text">What is the most exotic cat in the world?</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assets/img/portfolio/cat03.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">What are ways to calm a kitten?</h5>
+                <p class="card-text">How To Calm A Kitten: 10 Effective Tricks Let catnip do the trick.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+
+            <div class="card ">
+              <img src="assets/img/portfolio/cat04.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Why does my cat keep staring at me?</h5>
+                <p class="card-text">Most likely, your cat is checking you out and stalking you.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+            <div class="card">
+              <img src="assets/img/portfolio/cat05.jpg" class="card-img-top" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">Is it normal for a kitten to sleep a lot?</h5>
+                <p class="card-text">They will sleep from 18-22 hours a day.</p>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">Last updated 3 mins ago</small>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- ==== END OF CATS BLOG PORTFOLIO ==== -->
       </div>
+
     </div>
   </div>
   <!-- container -->
