change menu to chinese

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="#home-section" class="smoothScroll">Welcome</a></li>
-            <li> <a href="#services" class="smoothScroll">Events</a></li>
-            <li> <a href="#about" class="smoothScroll"> About Us</a></li>
-            <li> <a href="#portfolio" class="smoothScroll"> Gallery</a></li>
-            <li> <a href="#team" class="smoothScroll">Testimonials</a></li>
-            <li> <a href="#contact" class="smoothScroll"> Place</a></li>
+            <li><a href="#home-section" class="smoothScroll">首页</a></li>
+            <li> <a href="#services" class="smoothScroll">狗</a></li>
+            <li> <a href="#about" class="smoothScroll">猫</a></li>
+            <li> <a href="#portfolio" class="smoothScroll">热门</a></li>
+            <li> <a href="#team" class="smoothScroll">团队合作</a></li>
+            <li> <a href="#contact" class="smoothScroll">联系我们</a></li>
           </ul>
         </div>
         <!--/.nav-collapse -->
@@ -62,8 +62,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h1>Breaking Pet Forum</h1>
-          <p>When pets get together </p>
+          <h1>北美宠物论坛</h1>
+          <p>有关宠物的一切话题</p>
         </div>
       </div>
     </div>
