adjusting card responsive (not yet working)

--- a/index.html
+++ b/index.html
@@ -114,137 +114,142 @@
     </div>
 
   </section>
-  <div class="div-pattern"></div>
-  <!-- ==== ABOUT ==== -->
-  <div id="about" name="about">
-    <div class="container">
-      <h2 class="centered">BLOGS</h2>
-      <hr>
+  <!-- ==== START BLOG SECTION ==== -->
+  <div class="row">
+    <div class="div-pattern"></div>
+    <!-- ==== ABOUT ==== -->
+    <div id="about" name="about">
+      <div class="container">
+        <h2 class="centered">BLOGS</h2>
+        <hr>
 
 
-      <!-- ==== START BLOG PORTFOLIO ==== -->
-      <div class="col-md-12">
-        <!-- ==== START OF DOGS BLOG PORTFOLIO ==== -->
-        <h3>Dogs</h3>
-        <div class="row-home-portfolio">
-          <div class="card-deck">
-            <div class="card">
-              <img src="assets/img/portfolio/dog01.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Can a Golden Retriever be a good family dog?</h5>
-                <p class="card-text">Golden retrievers are great with babies, older kids, adults, and other dogs.</p>
+        <!-- ==== START BLOG PORTFOLIO ==== -->
+        <div class="col-md-10" style="float:none;margin:auto;">
+          <!-- ==== START OF DOGS BLOG PORTFOLIO ==== -->
+          <h3>Dogs</h3>
+          <div class="row-home-portfolio">
+            <div class="card-deck">
+              <div class="card">
+                <img src="assets/img/portfolio/dog01.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Can a Golden Retriever be a good family dog?</h5>
+                  <p class="card-text">Golden retrievers are great with babies, older kids, adults, and other dogs.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <div class="card">
+                <img src="assets/img/portfolio/dog02.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">What's the best way to socialize a German Shepherd?</h5>
+                  <p class="card-text">Expose your German Shepherd to other people, family, and pets. </p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="assets/img/portfolio/dog02.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">What's the best way to socialize a German Shepherd?</h5>
-                <p class="card-text">Expose your German Shepherd to other people, family, and pets. </p>
+              <div class="card">
+                <img src="assets/img/portfolio/dog03.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">How do i train my puppy</h5>
+                  <p class="card-text">Exercise your puppy before training them so they aren’t as hyper.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </div>
-            </div>
-            <div class="card">
-              <img src="assets/img/portfolio/dog03.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">How do i train my puppy</h5>
-                <p class="card-text">Exercise your puppy before training them so they aren’t as hyper.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </div>
-            </div>
 
-            <div class="card ">
-              <img src="assets/img/portfolio/dog04.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Searching for the best dog groomer in san francisco?</h5>
-                <p class="card-text">How often your dog should be groomed is, on average, every six weeks.</p>
+              <div class="card ">
+                <img src="assets/img/portfolio/dog04.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Searching for the best dog groomer in san francisco?</h5>
+                  <p class="card-text">How often your dog should be groomed is, on average, every six weeks.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </div>
-            </div>
-            <div class="card">
-              <img src="assets/img/portfolio/dog05.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Socializing Your Puppy During the COVID-19 Pandemic</h5>
-                <p class="card-text">The social distancing required during the COVID-19 pandemic can make it more challenging to socialize your puppy.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <div class="card">
+                <img src="assets/img/portfolio/dog05.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Socializing Your Puppy During the COVID-19 Pandemic</h5>
+                  <p class="card-text">The social distancing required during the COVID-19 pandemic can make it more challenging to socialize your puppy.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- ==== END OF DOGS BLOG PORTFOLIO ==== -->
-        <!-- ==== START OF CATS BLOG PORTFOLIO ==== -->
-        <h3>Cats</h3>
-        <div class="row-home-portfolio">
-          <div class="card-deck">
-            <div class="card">
-              <img src="assets/img/portfolio/cat01.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Here's the Best Way to Pet a Cat, According to Science</h5>
-                <p class="card-text">Signs of cat enjoyment: • Tail held upright and choosing to initiate contact.</p>
+          <!-- ==== END OF DOGS BLOG PORTFOLIO ==== -->
+          <!-- ==== START OF CATS BLOG PORTFOLIO ==== -->
+          <h3>Cats</h3>
+          <div class="row-home-portfolio">
+            <div class="card-deck">
+              <div class="card">
+                <img src="assets/img/portfolio/cat01.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Here's the Best Way to Pet a Cat, According to Science</h5>
+                  <p class="card-text">Signs of cat enjoyment: • Tail held upright and choosing to initiate contact.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <div class="card">
+                <img src="assets/img/portfolio/cat02.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">What is the most exotic cat in the world?</h5>
+                  <p class="card-text">What is the most exotic cat in the world?</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-            </div>
-            <div class="card">
-              <img src="assets/img/portfolio/cat02.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">What is the most exotic cat in the world?</h5>
-                <p class="card-text">What is the most exotic cat in the world?</p>
+              <div class="card">
+                <img src="assets/img/portfolio/cat03.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">What are ways to calm a kitten?</h5>
+                  <p class="card-text">How To Calm A Kitten: 10 Effective Tricks Let catnip do the trick.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </div>
-            </div>
-            <div class="card">
-              <img src="assets/img/portfolio/cat03.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">What are ways to calm a kitten?</h5>
-                <p class="card-text">How To Calm A Kitten: 10 Effective Tricks Let catnip do the trick.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </div>
-            </div>
 
-            <div class="card ">
-              <img src="assets/img/portfolio/cat04.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Why does my cat keep staring at me?</h5>
-                <p class="card-text">Most likely, your cat is checking you out and stalking you.</p>
+              <div class="card ">
+                <img src="assets/img/portfolio/cat04.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Why does my cat keep staring at me?</h5>
+                  <p class="card-text">Most likely, your cat is checking you out and stalking you.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </div>
-            </div>
-            <div class="card">
-              <img src="assets/img/portfolio/cat05.jpg" class="card-img-top" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Is it normal for a kitten to sleep a lot?</h5>
-                <p class="card-text">They will sleep from 18-22 hours a day.</p>
-              </div>
-              <div class="card-footer">
-                <small class="text-muted">Last updated 3 mins ago</small>
+              <div class="card">
+                <img src="assets/img/portfolio/cat05.jpg" class="card-img-top" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Is it normal for a kitten to sleep a lot?</h5>
+                  <p class="card-text">They will sleep from 18-22 hours a day.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
               </div>
             </div>
           </div>
+          <!-- ==== END OF CATS BLOG PORTFOLIO ==== -->
         </div>
-        <!-- ==== END OF CATS BLOG PORTFOLIO ==== -->
+
       </div>
-
     </div>
   </div>
+  <!-- ==== END BLOG SECTION ==== -->
+
   <!-- container -->
   <!-- ==== PORTFOLIO ==== -->
   <div id="portfolio" name="portfolio">
