--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
-
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="assets/css/styles.css" rel="stylesheet">
