fixed card responsive with card-columns

--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
           <!-- ==== START OF DOGS BLOG PORTFOLIO ==== -->
           <h3>Dogs</h3>
           <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="card-deck">
+            <div class="card-columns">
               <div class="card h-100">
-                <img src="assets/img/portfolio/dog01.jpg" class="card-img-top" alt="Card image cap">
+                <img src="assets/img/portfolio/dog08.jpg" class="card-img-top" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">Can a Golden Retriever be a good family dog?</h5>
                   <p class="card-text">Golden retrievers are great with babies, older kids, adults, and other dogs.</p>
@@ -178,7 +178,7 @@
           <!-- ==== START OF CATS BLOG PORTFOLIO ==== -->
           <h3>Cats</h3>
           <div class="row">
-            <div class="card-deck">
+            <div class="card-columns">
               <div class="card">
                 <img src="assets/img/portfolio/cat01.jpg" class="card-img-top" alt="Card image cap">
                 <div class="card-body">
@@ -188,7 +188,7 @@
               </div>
 
               <div class="card">
-                <img src="assets/img/portfolio/cat02.jpg" class="card-img-top" alt="Card image cap">
+                <img src="assets/img/portfolio/cat08.jpg" class="card-img-top" alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">What is the most exotic cat in the world?</h5>
                   <p class="card-text">What is the most exotic cat in the world?</p>
