reverse back to card-deck, card-columns is messed up in chrome

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav pull-right">
-            <li><a href="#home-section" class="smoothScroll">首页</a></li>
+            <li class="active"><a href="#home-section" class="smoothScroll">首页</a></li>
             <li> <a href="#services" class="smoothScroll">狗</a></li>
             <li> <a href="#about" class="smoothScroll">猫</a></li>
             <li> <a href="#portfolio" class="smoothScroll">热门</a></li>
@@ -116,10 +116,7 @@
 
   </section>
   <!-- ==== START BLOG SECTION ==== -->
-  <div class="row">
-    <div class="div-pattern"></div>
     <!-- ==== ABOUT ==== -->
-    <div id="about" name="about">
       <div class="container">
         <h2 class="centered">BLOGS</h2>
         <hr>
@@ -129,8 +126,8 @@
         <div class="col-md-12">
           <!-- ==== START OF DOGS BLOG PORTFOLIO ==== -->
           <h3>Dogs</h3>
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="card-columns">
+          <div class="row">
+            <div class="card-deck">
               <div class="card h-100">
                 <img src="assets/img/portfolio/dog08.jpg" class="card-img-top" alt="Card image cap">
                 <div class="card-body">
@@ -178,7 +175,7 @@
           <!-- ==== START OF CATS BLOG PORTFOLIO ==== -->
           <h3>Cats</h3>
           <div class="row">
-            <div class="card-columns">
+            <div class="card-deck">
               <div class="card">
                 <img src="assets/img/portfolio/cat01.jpg" class="card-img-top" alt="Card image cap">
                 <div class="card-body">
@@ -221,10 +218,8 @@
             </div>
           </div>
           <!-- ==== END OF CATS BLOG PORTFOLIO ==== -->
-        </div>
 
       </div>
-    </div>
   </div>
   <!-- ==== END BLOG SECTION ==== -->
 
