fixing wechat display prob

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h3>Dogs</h3>
         <div class="row">
           <div class="card-deck">
-            <div class="card h-100">
+            <div class="card ">
               <img src="assets/img/portfolio/dog08.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Can a Golden Retriever be a good family dog?</h5>
@@ -108,7 +108,7 @@
               </div>
             </div>
 
-            <div class="card h-100">
+            <div class="card ">
               <img src="assets/img/portfolio/dog02.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">What's the best way to socialize a German Shepherd?</h5>
@@ -116,7 +116,7 @@
               </div>
             </div>
 
-            <div class="card h-100">
+            <div class="card ">
               <img src="assets/img/portfolio/dog03.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">How do i train my puppy</h5>
@@ -124,7 +124,7 @@
               </div>
             </div>
 
-            <div class="card h-100">
+            <div class="card ">
               <img src="assets/img/portfolio/dog04.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title">Searching for the best dog groomer in san francisco?</h5>
