--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
         <div class="row">
           <div class="card-deck">
             <div class="card ">
-              <img src="assets/img/portfolio/dog08.jpg" class="card-img-top" alt="Card image cap">
+              <img src="assets/img/portfolio/dog02.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Can a Golden Retriever be a good family dog?</h5>
-                <p class="card-text">Golden retrievers are great with babies, older kids, adults, and other dogs.</p>
+                <h5 class="card-title">What's the best way to socialize a German Shepherd?</h5>
+                <p class="card-text">Expose your German Shepherd to other people, family, and pets. </p>
               </div>
             </div>
 
