fixing wechat display prob

--- a/index.html
+++ b/index.html
@@ -101,42 +101,42 @@
         <div class="row">
           <div class="card-deck">
             <div class="card ">
-              <img src="assets/img/portfolio/dog02.jpg" class="card-img-top" alt="Card image cap">
+              <img src="assets/img/portfolio/dog08.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">What's the best way to socialize a German Shepherd?</h5>
-                <p class="card-text">Expose your German Shepherd to other people, family, and pets. </p>
+                <h5 class="card-title">如何正确的在家训练小狗</h5>
+                <p class="card-text">每天定时喂食，每天定时让狗狗排泄，使用固定的口令。</p>
               </div>
             </div>
 
             <div class="card ">
               <img src="assets/img/portfolio/dog02.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">What's the best way to socialize a German Shepherd?</h5>
-                <p class="card-text">Expose your German Shepherd to other people, family, and pets. </p>
+                <h5 class="card-title">黑背和淘气孩子相处安全吗？</h5>
+                <p class="card-text">德牧很爱和小朋友相处，但如果孩子很小，要让双方在大人的注视之下相处。 </p>
               </div>
             </div>
 
             <div class="card ">
               <img src="assets/img/portfolio/dog03.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">How do i train my puppy</h5>
-                <p class="card-text">Exercise your puppy before training them so they aren’t as hyper.</p>
+                <h5 class="card-title">如何阻止狗狗扑人？</h5>
+                <p class="card-text">这个问题，只要训练方法正确，纠正起来不是难事——根本不需要强烈的手法或工具。</p>
               </div>
             </div>
 
             <div class="card ">
               <img src="assets/img/portfolio/dog04.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Searching for the best dog groomer in san francisco?</h5>
-                <p class="card-text">How often your dog should be groomed is, on average, every six weeks.</p>
+                <h5 class="card-title">三番市请推荐好的狗狗理发师</h5>
+                <p class="card-text">作为一中精致的男狗，我家亨利每年夏天都会修剪毛发避暑的。</p>
               </div>
             </div>
 
             <div class="card">
               <img src="assets/img/portfolio/dog05.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Socializing Your Puppy During the COVID-19 Pandemic</h5>
-                <p class="card-text">The social distancing required during the COVID-19 pandemic.</p>
+                <h5 class="card-title">疫情期间狗狗怎么交友？</h5>
+                <p class="card-text">狗狗和小朋友一样隔离在家久了难免寂寞烦躁。</p>
               </div>
             </div>
 
@@ -151,40 +151,40 @@
             <div class="card">
               <img src="assets/img/portfolio/cat01.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Here's the Best Way to Pet a Cat, According to Science</h5>
-                <p class="card-text">Signs of cat enjoyment: • Tail held upright and choosing to initiate contact.</p>
+                <h5 class="card-title">怎么合理的撸猫， 你爽它也爽！</h5>
+                <p class="card-text">合理的撸猫手法，可以让猫咪翻出肚皮，露出陶醉的神情，发出的咕噜声。</p>
               </div>
             </div>
 
             <div class="card">
               <img src="assets/img/portfolio/cat08.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">What is the most exotic cat in the world?</h5>
-                <p class="card-text">What is the most exotic cat in the world?</p>
+                <h5 class="card-title">名品猫知多少?</h5>
+                <p class="card-text">猫中贵族你知道是哪些吗？</p>
               </div>
             </div>
 
             <div class="card">
               <img src="assets/img/portfolio/cat03.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">What are ways to calm a kitten?</h5>
-                <p class="card-text">How To Calm A Kitten: 10 Effective Tricks Let catnip do the trick.</p>
+                <h5 class="card-title">日本的猫文化：日本人为何痴迷爱猫?</h5>
+                <p class="card-text">招财猫源于日本，自古以来被日本视为招财招福的吉祥物。</p>
               </div>
             </div>
 
             <div class="card ">
               <img src="assets/img/portfolio/cat04.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Why does my cat keep staring at me?</h5>
-                <p class="card-text">Most likely, your cat is checking you out and stalking you.</p>
+                <h5 class="card-title">为什么猫咪总看着我？</h5>
+                <p class="card-text">猫咪的好奇心是很强的，它喜欢盯着你看。</p>
               </div>
             </div>
 
             <div class="card">
               <img src="assets/img/portfolio/cat05.jpg" class="card-img-top" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title">Is it normal for a kitten to sleep a lot?</h5>
-                <p class="card-text">They will sleep from 18-22 hours a day.</p>
+                <h5 class="card-title">猫咪爱睡觉，是累了还是生病？</h5>
+                <p class="card-text">要判断你的猫是否生病，如果猫的体重一直往下降，就需要接受医学救助。</p>
               </div>
             </div>
           </div>
